--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^0.9.2",
     "react-redux": "^5.0.7",
-    "react-redux-form": "^1.16.8",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.3",
     "reactstrap": "^5.0.0",
